get ocaml from nix instead of opam

--- a/reason/private/opam/BUILD
+++ b/reason/private/opam/BUILD
@@ -3,35 +3,8 @@ package(default_visibility = ["//:__subpackages__"])
 exports_files(["ocamlrun.tpl", "opam_package.tpl"])
 
 genrule(
-    name = "init_opam",
-    srcs = ["@opam"],
-    outs = ["opam_root.tar"],
-    cmd = """\
-      # compute this package's root directory
-      pkg_root=$$(dirname $(location :opam_root.tar))
-      abs_pkg_root=$$(pwd)/$$pkg_root
-
-      opam=$(location @opam//:opam)
-
-      # make sure the path is good
-      mkdir -p $$abs_pkg_root;
-
-      # initialize opam
-      comp=ocaml-base-compiler.4.08.1
-      # disabling sandbox since bazel uses its own
-      OPAMROOT=$$abs_pkg_root $$opam init -n --disable-sandboxing --comp $$comp
-
-      # package the opam root
-      gtar --transform "s=$$pkg_root/==g" \
-          --create $$pkg_root \
-          --dereference \
-          > $(location :opam_root.tar);
-      """,
-)
-
-genrule(
     name = "extract_binaries",
-    srcs = [":opam_root.tar"],
+    srcs = ["@ocaml//:srcs"],
     outs = [
         "ocaml_stdlib.tar",
         "ocamlc.opt",
@@ -40,12 +13,8 @@ genrule(
         "ocamlrun",
     ],
     cmd = """\
-      comp=ocaml-base-compiler.4.08.1
-      tar --extract \
-          --file $(location :opam_root.tar) \
-          --directory $(@D);
-
-      ocaml_root=$$(pwd)/$(@D)/$$comp
+      #ocaml_root=$$(pwd)/$(@D)
+      ocaml_root=$$(pwd)/external/ocaml/
 
       cp -f $$ocaml_root/bin/ocamlc.opt   $(@D)/ocamlc.opt;
       cp -f $$ocaml_root/bin/ocamldep.opt $(@D)/ocamldep.opt;
@@ -53,10 +22,9 @@ genrule(
       cp -f $$ocaml_root/bin/ocamlrun $(@D)/ocamlrun;
 
       # pack ml stdlib preserving paths
-      gtar --transform "s=$(@D)/$$comp/==g" \
-          --create $(@D)/$$comp/lib/* \
-          --dereference \
-          > $(location ocaml_stdlib.tar);
+      cd $$ocaml_root
+      gtar --create lib/ocaml/* \
+          > ../../$(location ocaml_stdlib.tar);
 
       """,
 )
